--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Project Atestat</string>
+    <string name="appointment_name_placeholder">Appointment</string>
+    <string name="appointment_date_placeholder">Date</string>
+    <string name="appointment_doctor_placeholder">Doctor</string>
 </resources>
